# audio-transcriber

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
audio_transcriber/: __init__.py  cli.py  recorder.py  streaming.py  transcriber.py
